# ACC

./: .cm  .cmfix  .dockerignore  .easignore  .env  .env.example  .gitignore  .mcp.json  .railwayignore  ACTIVATION.md  AGENTS.md  AUDIT_REPORT_FULL.md  AUDIT_UPDATED.md  DEPLOY.md  DEPLOY_WORKFLOW.yml  Dockerfile  EXECUTION_CHECKLIST.md  FINAL_SUMMARY.md  INSTALL_ACC.ps1  INSTALL_AUTOSTART.bat  QUICK_REFERENCE.md  RAILWAY_GUIDE.md  README.md  README_DOCUMENTATION_INDEX.md  START_ACC.bat  START_DASHBOARD.bat  TASK_BRIEF_T3_OPENHANDS.md  TASK_BRIEF_T4_T6_T7_CLAUDE.md  _final_check.js  _railway_probe.js  _rw.js  _tc_railway.js  _vcheck.js  acc-monitor.js  acc-scheduler-task.xml  acc.config.json  acc.js  audit-report.txt  audit.js  autoMode.js  (+30 more)
.codex/: config.toml
.cursor/: rules
AGENT_1_SECURITY_AUTH_BACKEND/: ACCEPTANCE_CHECKLIST.md  ARCHIVE_ROUTER_NOTE.md  COMPREHENSIVE_PROOF_REPORT_2026-05-31.md  PROMPT_FOR_AGENT.md  README.md  RETENTION_AND_DELETION_GUIDE.md  STATUS_REPORT_2026-05-31.md  TASKS.md
acc-extension/: background.js  manifest.json  popup.html  popup.js
cloud/: api.js  executor.js  graphRunner.js  graphRunner.service.js  nixpacks.toml  orchestrator.js  queue.js  router.js  server.js  worker.js
cloud/workflows/crewai/autonomous_resume_driven_job_search_with_clickup_integration_v1_crewai-project/: README.md  pyproject.toml
cloud/workflows/crewai/autonomous_resume_driven_job_search_with_clickup_integration_v1_crewai-project/src/autonomous_resume_driven_job_search_with_clickup_integration/: crew.py  main.py
cloud/workflows/crewai/autonomous_resume_driven_job_search_with_clickup_integration_v1_crewai-project/src/autonomous_resume_driven_job_search_with_clickup_integration/config/: agents.yaml  tasks.yaml
cloud/workflows/crewai/autonomous_resume_driven_job_search_with_clickup_integration_v1_crewai-project/src/autonomous_resume_driven_job_search_with_clickup_integration/tools/: custom_tool.py
cloud/workflows/crewai/cost_optimized_ai_video_production_suite_v1_crewai-project/: README.md  pyproject.toml
cloud/workflows/crewai/cost_optimized_ai_video_production_suite_v1_crewai-project/src/cost_optimized_ai_video_production_suite/: crew.py  main.py
cloud/workflows/crewai/cost_optimized_ai_video_production_suite_v1_crewai-project/src/cost_optimized_ai_video_production_suite/config/: agents.yaml  tasks.yaml
cloud/workflows/crewai/intelligent_job_application_automation_v1_crewai-project/: AGENTS.md  README.md  pyproject.toml
cloud/workflows/crewai/intelligent_job_application_automation_v1_crewai-project/knowledge/: user_preference.txt
cloud/workflows/crewai/intelligent_job_application_automation_v1_crewai-project/src/intelligent_job_application_automation/: crew.py  main.py
cloud/workflows/crewai/intelligent_job_application_automation_v1_crewai-project/src/intelligent_job_application_automation/config/: agents.yaml  tasks.yaml
data/: airtable_sync_fix.txt  alibaba_fallback.txt  briefing_fix.txt  briefing_fn.txt  c_Design_Runnable_agen.txt  c_Fix_approval_inline_.txt  c_Write_Alibaba_Cloud_.txt  c_Write_image_generati.txt  cmd_fixes.txt  fix_Meta.txt  fix_Write_guide_to_packa.txt  fix_Write_real_job_searc.txt  fp_Complete_parallel_wo.txt  fp_Composio.txt  fp_Fix_bot__short_answe.txt  fp_Fix_daily_briefing__.txt  fp_Wire_ClickUp_auto_sy.txt  fp_Write_complete_begin.txt  imagegen_raw.txt  (+21 more)
(+393 files in other folders)
