[project]
name = "autonomous_resume_driven_job_search_with_clickup_integration"
version = "0.1.0"
description = "autonomous_resume_driven_job_search_with_clickup_integration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
    "serpapi",
]

[project.scripts]
autonomous_resume_driven_job_search_with_clickup_integration = "autonomous_resume_driven_job_search_with_clickup_integration.main:run"
run_crew = "autonomous_resume_driven_job_search_with_clickup_integration.main:run"
train = "autonomous_resume_driven_job_search_with_clickup_integration.main:train"
replay = "autonomous_resume_driven_job_search_with_clickup_integration.main:replay"
test = "autonomous_resume_driven_job_search_with_clickup_integration.main:test"
run_with_trigger = "autonomous_resume_driven_job_search_with_clickup_integration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
