[project]
name = "cost_optimized_ai_video_production_suite"
version = "0.1.0"
description = "cost_optimized_ai_video_production_suite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
]

[project.scripts]
cost_optimized_ai_video_production_suite = "cost_optimized_ai_video_production_suite.main:run"
run_crew = "cost_optimized_ai_video_production_suite.main:run"
train = "cost_optimized_ai_video_production_suite.main:train"
replay = "cost_optimized_ai_video_production_suite.main:replay"
test = "cost_optimized_ai_video_production_suite.main:test"
run_with_trigger = "cost_optimized_ai_video_production_suite.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
